cambios en el test de unidad de AddGameToBox